--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -1,4 +1,4 @@
-<a href="#" id="scroll-to-top">&uarr; <span>{{i18n.scrollToTop}}</span></a>
+<a href="#" id="scroll-to-top">&uarr; <span>{{site.scrollToTop}}</span></a>
 
 <footer {{#if className}}class="{{className}}"{{/if}} role="contentinfo">
 
@@ -9,9 +9,9 @@
           <img alt="Linux Foundation Collaborative Projects" src="/static/images/lfcp.png">
         </a>
         <ul class="list-divider-pipe issue-link">
-          <li><a href="https://github.com/nodejs/node/issues">{{i18n.reportNodeIssue}}</a></li>
-          <li><a href="https://github.com/nodejs/nodejs.org/issues">{{i18n.reportWebsiteIssue}}</a></li>
-          <li><a href="https://github.com/nodejs/help/issues">{{i18n.getHelpIssue}}</a></li>
+          <li><a href="https://github.com/nodejs/node/issues">{{site.reportNodeIssue}}</a></li>
+          <li><a href="https://github.com/nodejs/nodejs.org/issues">{{site.reportWebsiteIssue}}</a></li>
+          <li><a href="https://github.com/nodejs/help/issues">{{site.getHelpIssue}}</a></li>
         </ul>
       </div>
 
