--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -77,7 +77,7 @@
   }
 
   #interactive {
-    background-image: url("/static/images/interactive/background.png");
+    background-image: url("/static/images/interactive/background.jpg");
     display: flex;
     align-items: center;
     justify-content: space-around;
