Replace Mac OS X / OS X with macOS (#952)
Fixes: https://github.com/nodejs/nodejs.org/issues/951

--- a/layouts/partials/primary-download-matrix.hbs
+++ b/layouts/partials/primary-download-matrix.hbs
@@ -54,12 +54,12 @@
       </tr>
 
       <tr>
-        <th>Mac OS X Installer (.pkg)</th>
+        <th>macOS Installer (.pkg)</th>
         <td colspan="6"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}.pkg">64-bit</a></td>
       </tr>
 
       <tr>
-        <th>Mac OS X Binaries (.tar.gz)</th>
+        <th>macOS Binaries (.tar.gz)</th>
         <td colspan="6"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-darwin-x64.tar.gz">64-bit</a></td>
       </tr>
 
