blog: make shasums an h3, remove SHA512/SHA256 note (#976)

--- a/scripts/release.hbs
+++ b/scripts/release.hbs
@@ -16,7 +16,8 @@ author: {{author}}
 Other release files: https://nodejs.org/dist/v{{version}}/<br>
 Documentation: https://nodejs.org/docs/v{{version}}/api/
 
-Shasums (GPG signing hash: SHA512, file hash: SHA256):
+<h3 id="shasums">SHASUMS</h3>
+
 ```
 {{shasums}}
 ```
