Update links for AIX and Linux on Z downloads (#940)
Now that binaries are being built as part of release:

- Update the links for AIX and Linux on Z on the download
  page so that they point to the binaries available on
  the community download site instead of the
  external IBM download page.
- Add AIX, Linux s390x and Linux PPC BE to the helper
  used to generate release announcements.

--- a/layouts/partials/secondary-download-matrix.hbs
+++ b/layouts/partials/secondary-download-matrix.hbs
@@ -25,11 +25,11 @@
 
       <tr>
         <th>Linux on System z</th>
-        <td colspan="6"><a href="http://www.ibm.com/developerworks/web/nodesdk/">Download (Unofficial, provided by IBM)</a></td>
+        <td colspan="6"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-linux-s390x.tar.xz">64-bit</a></td>
       </tr>
       <tr>
         <th>AIX on Power Systems</th>
-        <td colspan="6"><a href="http://www.ibm.com/developerworks/web/nodesdk/">Download (Unofficial, provided by IBM)</a></td>
+        <td colspan="6"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-aix-ppc64.tar.gz">64-bit</a></td>
       </tr>
     </tbody>
   </table>
