Add link to Node-ChakraCore nightlies (#1027)

--- a/layouts/partials/download-list.hbs
+++ b/layouts/partials/download-list.hbs
@@ -5,6 +5,7 @@
     <li><a href="/{{site.locale}}/{{site.download.package-manager.link}}">{{site.download.package-manager.text}}</a></li>
     <li><a href="/{{site.locale}}/{{site.download.releases.link}}/">{{site.download.releases.text}}</a></li>
     <li><a href="https://nodejs.org/download/nightly/">{{site.nightly}}</a></li>
+    <li><a href="https://nodejs.org/download/chakracore-nightly/">{{site.chakracore-nightly}}</a></li>
   </ul>
   <p>{{downloads.buildDisclaimer}}</p>
 </section>
