--- a/layouts/partials/header.hbs
+++ b/layouts/partials/header.hbs
@@ -2,7 +2,7 @@
   <div class="container">
 
     <a href="/{{site.locale}}" id="logo">
-      <img src="/static/images/logo-header.png" alt="node.js">
+      <img src="/static/images/logo.svg" alt="node.js">
     </a>
 
     <nav>
