Remove border-radius from hovered links on frontpage (#1054)

--- a/layouts/css/page-modules/_home.styl
+++ b/layouts/css/page-modules/_home.styl
@@ -29,6 +29,7 @@
     &:hover
       background-color transparent
       border-bottom 1px solid $home-secondary-links-color
+      border-radius 0
 
 #home-intro
   max-width $body-max-width * 0.75
