Add a partial for MailChimp signup forms (#932)

--- a/layouts/foundation.hbs
+++ b/layouts/foundation.hbs
@@ -12,6 +12,9 @@
 
       <article>
         {{{ contents }}}
+        {{#if newsletter}}
+          {{> mc-signup-form newsletter }}
+        {{/if}}
       </article>
 
     </div>
