Use one stylesheet for all locales (#1085)
Fixes #985

--- a/layouts/css/styles.styl
+++ b/layouts/css/styles.styl
@@ -1,79 +1,5 @@
 @import '_variables'
-
-// Base styles
-body
-  box-sizing border-box
-  font 400 20px/1.5 'Source Sans Pro', Open Sans, Roboto, 'San Francisco', Helvetica, Arial, sans-serif
-  color $node-gray
-  margin 0
-  background-color $white
-
-header,
-#main,
-footer
-  display flex
-
-h1,
-h2,
-h3,
-h4,
-h5
-  font-weight 400
-
-a,
-a:link,
-a:active
-  color $node-green
-  text-decoration none
-  border-radius 2px
-
-a:hover
-  color $white
-  background-color $node-green
-
-a:hover
-  code
-    background-color transparent
-    color #fff
-
-a.imagelink:hover
-  background-color transparent
-
-strong,
-b
-  font-weight 600
-
-p
-  a
-    padded-link(2px)
-
-img
-  display block
-  max-width 100%
-
-  .logos &
-    // Fixes logo size on Firefox, see:
-    // https://github.com/nodejs/nodejs.org/issues/558
-    width 100%
-
-code
-  background-color $light-gray3
-  font-size 85%
-  padding 0.2em
-
-pre
-  background-color $node-gray
-  border-radius 3px
-  padding 0.75em 1.2em
-  font-size 0.8em
-  white-space pre-wrap
-  color $light-gray3
-  overflow-x auto
-
-  code
-    color $light-gray3
-    background-color inherit
-
+@import '_base'
 // Import specific page sections and layout parts
 @import 'layout/_sticky-footer'
 @import 'layout/_grid'
