--- a/layouts/partials/html-head.hbs
+++ b/layouts/partials/html-head.hbs
@@ -17,7 +17,7 @@
   {{#each site.feeds}}
   <link rel="alternate" href="/{{ ../site.locale }}/{{ link }}" title="{{ text }}" type="application/rss+xml">
   {{/each}}
-  <link rel="stylesheet" href="/{{ site.locale }}/styles.css" media="all">
+  <link rel="stylesheet" href="/layouts/css/styles.css" media="all">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600">
   <script>
   document.querySelector('html').className += " has-js";
