Provide node+npm zip download for Windows (#1127)
Fixes #1059

--- a/layouts/partials/primary-download-matrix.hbs
+++ b/layouts/partials/primary-download-matrix.hbs
@@ -48,9 +48,9 @@
       </tr>
 
       <tr>
-        <th>Windows Binary (.exe)</th>
-        <td colspan="3"><a href="https://nodejs.org/dist/{{version.node}}/win-x86/node.exe">32-bit</a></td>
-        <td colspan="3"><a href="https://nodejs.org/dist/{{version.node}}/win-x64/node.exe">64-bit</a></td>
+        <th>Windows Binary (.zip)</th>
+        <td colspan="3"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-win-x86.zip">32-bit</a></td>
+        <td colspan="3"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-win-x64.zip">64-bit</a></td>
       </tr>
 
       <tr>
