Link build instructions on download page (#1181)
Fixes #1177

--- a/layouts/partials/download-list.hbs
+++ b/layouts/partials/download-list.hbs
@@ -6,6 +6,6 @@
     <li><a href="/{{site.locale}}/{{site.download.releases.link}}/">{{site.download.releases.text}}</a></li>
     <li><a href="https://nodejs.org/download/nightly/">{{site.nightly}}</a></li>
     <li><a href="https://nodejs.org/download/chakracore-nightly/">{{site.chakracore-nightly}}</a></li>
+    <li><a href="https://github.com/nodejs/node/blob/master/BUILDING.md#building-nodejs-on-supported-platforms">{{downloads.buildInstructions}}</a></li>
   </ul>
-  <p>{{downloads.buildDisclaimer}}</p>
 </section>
