Add 2017 NI CfP banner (#1179)
* add 2017 NI CfP banner

* remove bitly link in image

--- a/layouts/css/styles.styl
+++ b/layouts/css/styles.styl
@@ -6,6 +6,7 @@
 @import 'layout/_main'
 @import 'layout/_lists'
 @import 'page-modules/_linuxfoundation'
+@import 'page-modules/_interactive-banner'
 @import 'page-modules/_header'
 @import 'page-modules/_footer'
 @import 'page-modules/_home'
