--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -5,6 +5,15 @@
 <body>
   {{> header }}
 
+  <div id="interactive-wrapper">
+    <div id="interactive">
+      <a href="http://events.linuxfoundation.org/events/node-interactive">
+        <img src="/static/images/nodejs-interactive-cfp-banner.png"
+          alt="Node.js Interactive, Vancouver, B.C. October 4 - 7, 2017" />
+      </a>
+    </div>
+  </div>
+
   <div id="main">
     <div class="container">
 
