Tweak Node.js Interactive banner (#1194)

--- a/layouts/css/page-modules/_interactive-banner.styl
+++ b/layouts/css/page-modules/_interactive-banner.styl
@@ -2,6 +2,7 @@
   flex none
 
 #interactive
+  background-image url("/static/images/interactive/background.jpg")
   display flex
   align-items center
   justify-content space-around
