--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -73,7 +73,7 @@
           </div>
         {{/if}}
         <p>
-          {{{ labels.version-schedule-prompt }}} <a href="https://github.com/nodejs/LTS#lts-schedule">{{ labels.version-schedule-prompt-link-text }}.</a>
+          {{{ labels.version-schedule-prompt }}} <a href="https://github.com/nodejs/LTS#lts-schedule1">{{ labels.version-schedule-prompt-link-text }}.</a>
         </p>
       </div>
 
