--- a/layouts/css/page-modules/_interactive-banner.styl
+++ b/layouts/css/page-modules/_interactive-banner.styl
@@ -6,6 +6,8 @@
   display flex
   align-items center
   justify-content space-around
+  background-position center
+  background-repeat no-repeat
 
 #interactive
   > *
