Add Social Meta Tags to Site (#1276)
* Add logo-hexagon.png

Adds logo-hexagon.png

* Add OG/Twitter Card Meta Tags to html-head.hbs

Adds OpenGraph and Twitter Card meta tags to the site. Enables prettier shares from Node.js on social networks. ❤️

* Address comments on html-head.hbs

Addresses comments on updated `html-head.hbs`

* Update hexagon logo png

* Update og:image:width in html-head.hbs

Corrects image width to updated size for the fixed file for OpenGraph HTML meta tag.

--- a/layouts/partials/html-head.hbs
+++ b/layouts/partials/html-head.hbs
@@ -12,6 +12,19 @@
 
   <link rel="apple-touch-icon" href="/static/apple-touch-icon.png">
   <link rel="icon" sizes="32x32" type="image/png" href="/static/favicon.png">
+  
+  <meta property="og:site_name" content="Node.js">
+  <meta property="og:title" content="{{#if title}}{{ title }} | {{/if}}{{ site.title }}">
+  <meta name="og:image" content="/static/images/logo-hexagon.png">
+  <meta name="og:image:type" content="image/png">
+  <meta name="og:image:width" content="224">
+  <meta name="og:image:height" content="256">
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@nodejs">
+  <meta name="twitter:title" content="{{#if title}}{{ title }} | {{/if}}{{ site.title }}">
+  <meta name="twitter:image" content="/static/images/logo-hexagon.png">
+  <meta name="twitter:image:alt" content="The Node.js Hexagon Logo">
 
   <link rel="canonical" href="{{ site.url }}{{#if path}}{{ path }}/{{/if}}">
   {{#each site.feeds}}
