#1173: improve navigation through guides (#1286)
* 1173: improve navigation through guides.

* #1173: fix previous/next for de/it locales.

--- a/layouts/css/styles.styl
+++ b/layouts/css/styles.styl
@@ -18,6 +18,7 @@
 @import 'page-modules/_events'
 @import 'page-modules/_scrollToTop'
 @import 'page-modules/_anchorLinks'
+@import 'page-modules/_prev-next-navigation'
 
 .intro
   margin-top 140px
