Get data from google doc for Announcements (#1332)
* Get data from google doc for Announcements

* layouts/announcements.hbs: Use JS standard style

* remove yarn.lock

* Update in-the-news.hbs

* Update announcements.hbs

--- a/layouts/in-the-news.hbs
+++ b/layouts/in-the-news.hbs
@@ -15,6 +15,7 @@
       <article>
         <div class="container no-headline">
           <ul class="news-list">
+            <li>Loading data...</li>
           </ul>
         </div>
       </article>
