--- a/layouts/partials/primary-download-matrix.hbs
+++ b/layouts/partials/primary-download-matrix.hbs
@@ -1,5 +1,5 @@
 <section>
-  <p class="color-lightgray">{{downloads.currentVersion}}: <strong>{{version.node}}</strong> (includes npm {{version.npm}})</p>
+  <p class="color-lightgray">{{downloads.currentVersion}}: <strong>{{stripv version.node}}</strong> (includes npm {{version.npm}})</p>
   <p>{{downloads.intro}}</p>
   <div class="download-hero full-width">
     <ul class="no-padding download-version-toggle">
