--- a/layouts/download-releases.hbs
+++ b/layouts/download-releases.hbs
@@ -32,7 +32,7 @@
             <tbody>
               {{#each project.versions}}
               <tr>
-                <td data-label="Version">{{name}} {{version}}</td>
+                <td data-label="Version">{{name}} {{stripv version}}</td>
                 <td data-label="LTS">{{#if lts}}{{lts}}{{/if}}</td>
                 <td data-label="Date"><time>{{date}}</time></td>
                 <td data-label="V8">{{v8}}</td>
