layout: get rid of `.` and add to locale (#1464)

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -64,7 +64,7 @@
           </div>
         {{/if}}
         <p>
-          {{{ labels.version-schedule-prompt }}} <a href="https://github.com/nodejs/LTS#release-schedule">{{ labels.version-schedule-prompt-link-text }}.</a>
+          {{{ labels.version-schedule-prompt }}} <a href="https://github.com/nodejs/LTS#release-schedule">{{ labels.version-schedule-prompt-link-text }}</a>
         </p>
         {{#if labels.newsletter }}
         <p>
