--- a/layouts/css/page-modules/_header.styl
+++ b/layouts/css/page-modules/_header.styl
@@ -7,10 +7,10 @@ header
 
   li
     position relative
-  
+
   nav
     cursor default
-  
+
   nav
     a,
     a:link,
@@ -23,6 +23,17 @@ header
     a:hover
       background-color transparent
       text-decoration underline
+
+// Special format for external 'Foundation' link in main navigation
+.nav-foundation
+  margin-left 8px
+  background-color #026e00
+
+  &:before
+    content none !important
+
+  a
+    padding 0 16px !important
 
 @media screen and (min-width: 481px)
   header
