--- a/layouts/partials/html-head.hbs
+++ b/layouts/partials/html-head.hbs
@@ -15,10 +15,10 @@
 
   <meta property="og:site_name" content="Node.js">
   <meta property="og:title" content="{{#if title}}{{ title }} | {{/if}}{{ site.title }}">
-  <meta name="og:image" content="/static/images/logo-hexagon.png">
-  <meta name="og:image:type" content="image/png">
-  <meta name="og:image:width" content="224">
-  <meta name="og:image:height" content="256">
+  <meta property="og:image" content="/static/images/logo-hexagon.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="224">
+  <meta property="og:image:height" content="256">
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@nodejs">
