--- a/layouts/partials/html-head.hbs
+++ b/layouts/partials/html-head.hbs
@@ -15,7 +15,7 @@
 
   <meta property="og:site_name" content="Node.js">
   <meta property="og:title" content="{{#if title}}{{ title }} | {{/if}}{{ site.title }}">
-  <meta property="og:image" content="/static/images/logo-hexagon.png">
+  <meta property="og:image" content="https://nodejs.org/static/images/logo-hexagon.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="224">
   <meta property="og:image:height" content="256">
@@ -23,7 +23,7 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@nodejs">
   <meta name="twitter:title" content="{{#if title}}{{ title }} | {{/if}}{{ site.title }}">
-  <meta name="twitter:image" content="/static/images/logo-hexagon.png">
+  <meta name="twitter:image" content="https://nodejs.org/static/images/logo-hexagon.png">
   <meta name="twitter:image:alt" content="The Node.js Hexagon Logo">
 
   <link rel="canonical" href="{{ site.url }}{{#if path}}{{ path }}/{{/if}}">
