--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -14,7 +14,7 @@
 
         {{#if project.banner.visible}}
           <p class="home-version home-version-banner">
-            {{{ project.banner.content }}}
+            <a href="{{ project.banner.link }}">{{{ labels.banner }}}</a>
           </p>
         {{/if}}
 
