--- a/layouts/partials/download-list.hbs
+++ b/layouts/partials/download-list.hbs
@@ -1,6 +1,6 @@
 <section>
   <ul>
-    <li><a href="https://nodejs.org/dist/{{version.node}}/{{site.download.shasums.link}}">{{site.download.shasums.text}}</a></li>
+    <li><a href="https://nodejs.org/dist/{{version.node}}/{{site.download.shasums.link}}">{{site.download.shasums.text}}</a> (<a href="{{site.download.shasums.verify-link}}">{{site.download.shasums.verify-text}}</a>)</li>
     <li><a href="https://nodejs.org/dist/{{version.node}}">{{site.all-downloads}}</a></li>
     <li><a href="/{{site.locale}}/{{site.download.package-manager.link}}">{{site.download.package-manager.text}}</a></li>
     <li><a href="/{{site.locale}}/{{site.download.releases.link}}/">{{site.download.releases.text}}</a></li>
