Add Node 4 EOL banner (#1636)

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -12,6 +12,13 @@
 
         {{{ contents }}}
 
+        {{!-- Just a temporary announcement. Regular banner stays intact in case of important security release --}}
+        <p class="home-version home-version-banner">
+          <a href="https://medium.com/@nodejs/april-2018-release-updates-from-the-node-js-project-71687e1f7742">
+            Node 4.x is End Of Life – April Release Updates (Please Read)
+          </a>
+        </p>
+
         {{#if project.banner.visible}}
           <p class="home-version home-version-banner">
             <a href="{{ project.banner.link }}">{{#if project.banner.text}}{{{ project.banner.text }}}{{else}}{{{ labels.banner }}}{{/if}}</a>
