remove (Please Read) from banner (#1637)

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -15,7 +15,7 @@
         {{!-- Just a temporary announcement. Regular banner stays intact in case of important security release --}}
         <p class="home-version home-version-banner">
           <a href="https://medium.com/@nodejs/april-2018-release-updates-from-the-node-js-project-71687e1f7742">
-            Node 4.x is End Of Life – April Release Updates (Please Read)
+            Node 4.x is End Of Life – April Release Updates
           </a>
         </p>
 
