Use same monospaced fonts as Node.js API docs (#1675)
Ref: https://github.com/nodejs/node/pull/21036/

--- a/static/css/prism.css
+++ b/static/css/prism.css
@@ -8,7 +8,7 @@ code[class*="language-"],
 pre[class*="language-"] {
 	color: black;
 	text-shadow: 0 1px white;
-	font-family: Consolas, Monaco, 'Andale Mono', monospace;
+	font-family: SFMono-Regular, Menlo, Consolas, "Liberation Mono", "Courier New", monospace;
 	direction: ltr;
 	text-align: left;
 	white-space: pre;
