Set dns-prefetch URLs to https

--- a/layouts/partials/html-head.hbs
+++ b/layouts/partials/html-head.hbs
@@ -2,9 +2,9 @@
   <meta charset="utf-8">
   <title>{{#if title}}{{ title }} | {{/if}}{{ site.title }}</title>
 
-  <link rel="dns-prefetch" href="http://fonts.googleapis.com">
-  <link rel="dns-prefetch" href="http://fonts.gstatic.com">
-  <link rel="dns-prefetch" href="http://www.google-analytics.com">
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+  <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+  <link rel="dns-prefetch" href="https://www.google-analytics.com">
 
   <meta name="author" content="{{ site.author }}">
   <meta name="robots" content="{{#if robots}}{{ robots }}{{else}}index, follow{{/if}}">
