Add JS Interactive 2018 banner (#1732)
* Fix logo link

* Fix image link in blog post

* Add JS Interactive 2018 banner

* Fix http -> https

--- a/layouts/css/_base.styl
+++ b/layouts/css/_base.styl
@@ -34,8 +34,11 @@ a:hover
     background-color transparent
     color #fff
 
-a.imagelink:hover
-  background-color transparent
+a.imagelink
+  display inline-block
+
+  &:hover
+    background-color transparent
 
 strong,
 b
