--- a/layouts/partials/header.hbs
+++ b/layouts/partials/header.hbs
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
 
-    <a href="/{{site.locale}}" id="logo">
+    <a href="/{{site.locale}}/" id="logo">
       <img src="/static/images/logo.svg" alt="node.js">
     </a>
 
