Add hover effect to banner on home page (#1734)

--- a/layouts/css/page-modules/_home.styl
+++ b/layouts/css/page-modules/_home.styl
@@ -40,6 +40,13 @@
   h2
     margin-bottom 0
 
+.home-banner
+  opacity 1
+  transition .2s opacity ease-in-out
+
+  &:hover
+    opacity 0.85
+
 .home-downloadblock
   display inline-block
   margin 0 8px
