--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -13,7 +13,7 @@
         {{{ contents }}}
 
         <p>
-          <a class="imagelink" href="https://events.linuxfoundation.org/events/js-interactive-2018/?utm_source=nodesite&utm_medium=homepagebanner&utm_campaign=jsint18&utm_term=eventpage">
+          <a class="imagelink home-banner" href="https://events.linuxfoundation.org/events/js-interactive-2018/?utm_source=nodesite&utm_medium=homepagebanner&utm_campaign=jsint18&utm_term=eventpage">
             <img src="/static/images/jsinteractive-2018-banner.png" alt="JS Interactive on October 10-12, 2018 in Vancouver, Canada">
           </a>
         </p>
