--- a/layouts/css/page-modules/_header.styl
+++ b/layouts/css/page-modules/_header.styl
@@ -26,7 +26,6 @@ header
 
 // Special format for external 'Foundation' link in main navigation
 .nav-foundation
-  margin-left 8px
   background-color #026e00
 
   &:before
@@ -62,6 +61,9 @@ header
     a:active
       padding 0 8px
 
+  .nav-foundation
+    margin-left 8px
+
 @media screen and (max-width: 480px)
   header
     li
@@ -69,6 +71,8 @@ header
       float left
       padding 0
       margin 0
+    nav
+      margin 0 20px
     a,
     a:link,
     a:active
