--- a/layouts/partials/html-head.hbs
+++ b/layouts/partials/html-head.hbs
@@ -9,6 +9,7 @@
   <meta name="author" content="{{ site.author }}">
   <meta name="robots" content="{{#if robots}}{{ robots }}{{else}}index, follow{{/if}}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine." />
 
   <link rel="apple-touch-icon" href="/static/apple-touch-icon.png">
   <link rel="icon" sizes="32x32" type="image/png" href="/static/favicon.png">
@@ -19,6 +20,7 @@
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="224">
   <meta property="og:image:height" content="256">
+  <meta property="og:description" content="Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine." />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@nodejs">
