add link to installation instructions for Linux

--- a/layouts/partials/download-list.hbs
+++ b/layouts/partials/download-list.hbs
@@ -7,5 +7,6 @@
     <li><a href="https://nodejs.org/download/nightly/">{{site.nightly}}</a></li>
     <li><a href="https://nodejs.org/download/chakracore-nightly/">{{site.chakracore-nightly}}</a></li>
     <li><a href="https://github.com/nodejs/node/blob/master/BUILDING.md#building-nodejs-on-supported-platforms">{{downloads.buildInstructions}}</a></li>
+    <li><a href="https://github.com/nodejs/help/wiki/Installation">{{site.download.install-on-linux.text}}</a></li>
   </ul>
 </section>
