--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -15,7 +15,7 @@
         </ul>
       </div>
 
-      <p>© {{copyright}} Node.js Foundation. All Rights Reserved. Portions of this site originally © {{copyright}} Joyent. </p>
+      <p>© Node.js Foundation. All Rights Reserved. Portions of this site originally © Joyent. </p>
       <p>Node.js is a trademark of Joyent, Inc. and is used with its permission. Please review the <a href="/static/documents/trademark-policy.pdf">Trademark Guidelines of the Node.js Foundation</a>.</p>
       <p>Linux Foundation is a registered trademark of The Linux Foundation.</p>
       <p>Linux is a registered <a href="http://www.linuxfoundation.org/programs/legal/trademark" title="Linux Mark Institute">trademark</a> of Linus Torvalds.</p>
