--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -16,7 +16,7 @@
       </div>
 
       <p>© OpenJS Foundation. All Rights Reserved. Portions of this site originally © Joyent.</p>
-      <p>Node.js is a trademark of Joyent, Inc. and is used with its permission. Please review the <a href="/static/documents/trademark-policy.pdf">Trademark Guidelines of the OpenJS Foundation</a>.</p>
+      <p>Node.js is a trademark of Joyent, Inc. and is used with its permission. Please review the <a href="https://trademark-list.openjsf.org">Trademark List</a> and <a href="https://trademark-policy.openjsf.org">Trademark Guidelines</a> of the <a href="https://openjsf.org">OpenJS Foundation</a>.</p>
       <p>
         <a href="https://raw.githubusercontent.com/nodejs/node/master/LICENSE">Node.js Project Licensing Information</a>.
       </p>
