--- a/layouts/black-lives-matter.hbs
+++ b/layouts/black-lives-matter.hbs
@@ -223,9 +223,13 @@
       <li>&hellip;<a href="https://mappingpoliceviolence.org/unarmed">and</a> <a href="https://mappingpoliceviolence.org/unarmed2014">countless</a> <a href="https://apps.npr.org/documents/document.html?id=6933593-NPR-CodeSwitch-Saytheirnameslistv3">more</a> <a href="https://ebwiki.org/">lives</a> not listed here, taken by violence and brutality.</li>
 
     </ul>
-    <p>We've listed the names of the Black folks who have been murdered by police brutality in the U.S. dating back to 2009, both because the U.S. is the origin of the Black Lives Matter movement and currently the heart of the resistance.</p>
-
-    <p>With that said, we fully recognize that white supremacy and police brutality is a global problem. While we have not listed all of Black people who have lost their lives to police murder globally here, their lives mattered.</p>
+    <p>
+      White supremacy and police brutality are global problems. Every Black life
+      lost to police murder globally matters and mattered. The above list
+      contains the names of Black people murdered by police brutality in the
+      U.S. since 2009. This is because the U.S. is the origin of the Black Lives
+      Matter movement and currently the heart of the resistance.
+    </p>
   </section>
 
   <section>
