chore: improve Black Lives Matter text
Split long paragraph into two paragraphs. User shorter sentences for
more impact.

--- a/layouts/black-lives-matter.hbs
+++ b/layouts/black-lives-matter.hbs
@@ -242,7 +242,24 @@
 
   <section id="our-support">
 
-    <p>It would be wrong for us to ignore the unearned privilege that exists in Node.js: much of the project leadership is white, and a majority are men. We are and have been systematically complicit in perpetuating the issues that led to where we are now. We can't change how we've built out the project's leadership to date, but we can change how we build it moving forward. We are dedicated to being a part of the solution by actively centering the Black community with our collective platforms to uplift Black voices, share projects founded and built by Black community members, and actively hold ourselves accountable to our promises and make changes as needed. While it is our responsibility and it is not the work of the community to hold us accountable, we welcome you to share ways that we can do better by emailing <a href="mailto:blacklivesmatter@nodejs.org">blacklivesmatter@nodejs.org</a> or reaching out individually to any of our project leaders.</p>
+    <p>
+      It would be wrong for us to ignore the unearned privilege that exists in
+      Node.js. Much of the project leadership is white, and a majority are men.
+      We are and have been systematically complicit in perpetuating the issues
+      that led us to where we are. We can't change how we've built out the
+      project's leadership to date, but we can change how we build it moving
+      forward.
+    </p>
+
+    <p>
+      We are dedicated to being a part of the solution. We will actively center
+      the Black community and uplift Black voices. We will share projects
+      founded and built by Black community members. We will hold ourselves
+      accountable, fulfill our promises, and make changes as needed. While it is
+      our responsibility to hold ourselves accountable, we welcome your help. We
+      invite you to share ways that we can do better. Email <a href="mailto:blacklivesmatter@nodejs.org">blacklivesmatter@nodejs.org</a>
+      or reach out to any of our project leaders.
+    </p>
 
     <p>
       The responsibility to dismantle white supremacy does not fall on the Black
