chore: strengthen commitment to mentoring on Black Lives Matter page

--- a/layouts/black-lives-matter.hbs
+++ b/layouts/black-lives-matter.hbs
@@ -284,7 +284,14 @@
       We're here for you.
     </p>
 
- <p>Beginning with our upcoming Collaborator Summit event, and extending beyond, we will be offering mentorship to Black members of the community who wish to become contributors to the Node.js project. If you are interested in this, please send us an email at <a href="mailto:blacklivesmatter@nodejs.org">blacklivesmatter@nodejs.org</a> or direct message us at <a href="https://twitter.com/nodejs">@nodejs</a> on Twitter. We will post more information on how we will be proceeding with this effort as we finalize the details both for the period of the Collaborator summit and beyond that single event.</p>
+ <p>
+   We will mentor any Black community member who wishes to contribute to
+   Node.js. Please contact us a
+   <a href="mailto:blacklivesmatter@nodejs.org">blacklivesmatter@nodejs.org</a>
+   or <a href="https://twitter.com/nodejs">@nodejs</a> on Twitter. This effort
+   will begin during or before our Collaborator Summit later this month. We will
+   post more information soon.
+  </p>
 
   </section>
 
