chore: improve "please reach out" section of Black Lives Matter page
Edit the sentences for bervity and clarity. Also, added myself to the
list of Twitter handles.

--- a/layouts/black-lives-matter.hbs
+++ b/layouts/black-lives-matter.hbs
@@ -296,7 +296,13 @@
   </section>
 
   <section id="we-are-here-for-you">
-      <p>Please feel welcome to reach out to the <a href="https://github.com/nodejs/node#tsc-technical-steering-committee">Node.js TSC members</a> and <a href="https://github.com/nodejs/community-committee#community-committee-members">Node.js Community Committee members</a> via our email addresses listed in the links, respectively, or via Twitter DMs to the following folks in the project:</p>
+      <p>
+        Please feel welcome to contact
+        <a href="https://github.com/nodejs/node#tsc-technical-steering-committee">Technical Steering Committee</a>
+        and <a href="https://github.com/nodejs/community-committee#community-committee-members">Community Committee</a>
+        members. The preceding links contain email addresses for all members. If
+        you prefer, contact any of the following members on Twitter:
+      </p>
       <ul>
         <li><a href='https://twitter.com/codeekage'>Abraham Jr. Agiri</a></li>
         <li><a href='https://twitter.com/obensource'>Ben Michel</a></li>
@@ -306,6 +312,7 @@
         <li><a href='https://twitter.com/MylesBorins'>Myles Borins</a></li>
         <li><a href='https://twitter.com/codebytere'>Shelley Vohr</a></li>
         <li><a href='https://twitter.com/bitandbang'>Tierney Cyren</a></li>
+        <li><a href='https://twitter.com/Trott'>Rich Trott</a></li>
       </ul>
   </section>
 
