chore: implement small improvements to temporary Black Lives Matter page (#3218)
Implement some small improvements to the very end of the page directing
people to the Node.js information they may have originally come to the
page to find.

--- a/layouts/black-lives-matter.hbs
+++ b/layouts/black-lives-matter.hbs
@@ -281,7 +281,11 @@
   </section>
 
   <section id="temporary">
-    If you're looking for docs, they're <a href="https://nodejs.org/docs">still available</a>. If you're looking for information on the most recent security release, please see <a href="https://nodejs.org/en/blog/vulnerability/june-2020-security-releases/">the security release blog post</a>.
+    <p>If you're looking for docs, see
+    <a href="https://nodejs.org/en/docs/">https://nodejs.org/en/docs/</a>.</p>
+    <p>To download Node.js, see <a href="https://nodejs.org/en/download/">https://nodejs.org/en/download/</a>.</p>
+    <p>For information on the recent security release, see
+    <a href="https://nodejs.org/en/blog/vulnerability/june-2020-security-releases/">the security release blog post</a>.</p>
   </section>
 
   <footer>
