--- a/layouts/black-lives-matter.hbs
+++ b/layouts/black-lives-matter.hbs
@@ -301,7 +301,7 @@
         <a href="https://github.com/nodejs/node#tsc-technical-steering-committee">Technical Steering Committee</a>
         and <a href="https://github.com/nodejs/community-committee#community-committee-members">Community Committee</a>
         members. The preceding links contain email addresses for all members. If
-        you prefer, contact any of the following members on Twitter:
+        you prefer, you can contact any of the following members on Twitter:
       </p>
       <ul>
         <li><a href='https://twitter.com/codeekage'>Abraham Jr. Agiri</a></li>
